# ppchem

./: README.md  env.yml
Exercices/: 06_exercise.ipynb  07_exercises.ipynb  08_drfp_partA.ipynb  08_from_script_to_package.ipynb  aspirin.mol
amremover/: __init__.py  pyproject.toml
amremover/amremover.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
